# disparity-computation-framework

./: README.md
DCF/: dcf.m
DCF/DA&ME/Evaluation/Metrics/: badpixel_metric.m  rmse_metric.m  tar2ref_metric.m
DCF/DA&ME/PostProcessing/consistency_check/: fillPixelsReference.m  fill_min.m  filtermask.m  lr_check.m  lr_check_min.m  lr_check_min_disps.m  weightedMedianMatlab.m
DCF/DA&ME/PostProcessing/locally_consistent/: lc.m
DCF/DA&ME/PostProcessing/scc/: findTexturelessRegions.m  scc.m
DCF/DA&ME/PostProcessing/scc_v2/: inpainting_transport.m  scc_v2.m  weight_disp_bl.m  weight_disp_bl_no_spatial.m  weight_disp_bl_no_spatial_v2.m  weight_disp_bl_v2.m
DCF/DA&ME/PostProcessing/segment_plus_mode/: segment_mode.m
DCF/DA&ME/PostProcessing/superpixel_plus_mode/: matlab_superpixel_mode.m  slic.m  superpixel_mode.m
DCF/DCP/: prepare_bothDM.m
DCF/DCP/DenseDisparityMap/AggregationOptmization/IntegralImages/: crop_border.m  integral_image.m  make_border.m  mean_rectangle.m  norm_rectangle.m  stuff.m  sum_patches.m  sum_rectangle.m  variance_rectangle.m
DCF/DCP/DenseDisparityMap/BlockMatching/: block_matching.m  subpixel_block_matching.m
DCF/DCP/DenseDisparityMap/BlockMatching/CostFunctions/: aff_cost.m  btsad_cost.m  btssd_cost.m  lin_cost.m  ncc_cost.m  sad_cost.m  ssdNorm_cost.m  ssd_cost.m  stad_cost.m  tadCG_cost.m  zssd_cost.m
DCF/DCP/DenseDisparityMap/PreComputedData/: pre_compute_data.m
DCF/DCP/DenseDisparityMap/StereoVisionMethods/DemandingAlgorithms/edison_matlab_interface/: mex_shawn.m
DCF/DCP/DenseDisparityMap/StereoVisionMethods/Methods/bl_stereo/: bl.m  bl_asym.m  bl_asym_no_spatial.m  bl_no_spatial.m
DCF/DCP/DenseDisparityMap/StereoVisionMethods/Methods/fixed_window/: fw.m
DCF/DCP/DenseDisparityMap/StereoVisionMethods/Methods/gf_stereo/: gf.m
DCF/DCP/DenseDisparityMap/StereoVisionMethods/Methods/large_occlusion/: lo.m
DCF/DCP/DenseDisparityMap/StereoVisionMethods/Methods/max_likelihood/: ml.m  ml_slow.m  mlmh.m  mlmh_slow.m  nearest_interp.m
DCF/DCP/DenseDisparityMap/StereoVisionMethods/Methods/mrpg_gus/: mrpg.m  mrpg_asym.m  mrpg_asym_v2.m
DCF/DCP/DenseDisparityMap/StereoVisionMethods/Methods/segmented_based/: MeanShiftCluster.m  Ms.m  Ms2.m  sb.m  sb_old.m
DCF/DCP/DenseDisparityMap/StereoVisionMethods/Methods/shiftable_windows/: sw.m
DCF/DCP/DenseDisparityMap/StereoVisionMethods/Methods/variable_windows/: dp.m  dp2.m  mean_variance_horizontal.m  mean_variance_vertical.m  part1.m  part2.m  veskler_cost.m  vw.m
DCF/DCP/SparseDisparityMap/DisparityComputation/: abs_xdirection.m
DCF/DCP/SparseDisparityMap/FeatureDetection/: brisk_detector.m  fast_detector.m  harris_detector.m  mser_detector.m  surf_detector.m
DCF/DCP/SparseDisparityMap/TrackPoints/: track_features.m
DCF/PT&IT/: check_images.m  img_downsampling.m  img_upsampling.m  set_images.m
DCF/PT&IT/OriginalParams/: original_params.m
DCF/PT&IT/ParamsValidation/: compare_image_class.m  compare_image_size.m
DCF/PT&IT/PreProcessing/ImageFiltering/: bilateral_filter.m  guided_filter.m  mean_filter.m  median_filter.m
DCF/PT&IT/PreProcessing/ImageRectification/CalibratedCameras/: calibrated_rectify.m  projective_matrices.m
DCF/PT&IT/PreProcessing/ImageRectification/CalibratedCameras/Fusiello/: fusiello_rectify.m  imwarp_fusiello.m  rectifyImageE.m  rectifyImages.m
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/: uncalibrated_rectify.m
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/: BUILD.txt  (+1 more)
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/: CMakeLists.txt
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/convert/: convert.cpp
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/dataStereo/: CMakeLists.txt
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/density/: CMakeLists.txt  density.cpp
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/homography/: CMakeLists.txt  homography.cpp
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/libIO/: CMakeLists.txt  io_png.c  io_tiff.h
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/libNumerics/: matrix.cpp  matrix.h
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/libStereo/: patch.cpp  patch.h
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/libTransform/: TransformSize.cpp  gauss_convol.cpp  map_image.cpp  spline.cpp
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/medianFill/: CMakeLists.txt  main.cpp  median_disparity.cpp  median_disparity.h
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/mesh/: CMakeLists.txt  mesh.cpp
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/orsa/: CMakeLists.txt  main.cpp  orsa.cpp  orsa.h
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/rectify/: CMakeLists.txt  rectify.cpp
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/selfSimilar/: CMakeLists.txt  main.cpp  selfSimilar.cpp  selfSimilar.h
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/showRect/: CMakeLists.txt  showRect.cpp
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/sift/: CMakeLists.txt  demo_lib_sift.cpp  demo_sift.cpp  filter.cpp  splines.cpp
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/size/: CMakeLists.txt  size.cpp
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/stereoAC/: CMakeLists.txt  main.cpp  stereoAC.cpp  stereoAC.h
DCF/PT&IT/PreProcessing/ImageRectification/UncalibratedCameras/MissStereo/src/subPixel/: CMakeLists.txt  main.cpp  subpixel.cpp  subpixel.h
DCF/test/: .directory  calibrationSession.mat  save_from_imshow.m  test1.m  test10.m  test2.m  test3.m  test3_v2.m  test4.m  test5.m  test6.m  test7.m  test8.m  test9.m
(+3 files in other folders)
