CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Stereo)

IF(UNIX)
    SET(BUILD_SHARED_LIBS OFF CACHE BOOL "Dynamic libraries")
ENDIF(UNIX)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(libLWImage)
ADD_SUBDIRECTORY(libMatch)
ADD_SUBDIRECTORY(libNumerics)
ADD_SUBDIRECTORY(libStereo)
ADD_SUBDIRECTORY(libTransform)
ADD_SUBDIRECTORY(libIO)
ADD_SUBDIRECTORY(convert)
ADD_SUBDIRECTORY(dataStereo)
ADD_SUBDIRECTORY(density)
ADD_SUBDIRECTORY(selfSimilar)
ADD_SUBDIRECTORY(homography)
ADD_SUBDIRECTORY(medianFill)
ADD_SUBDIRECTORY(mesh)
ADD_SUBDIRECTORY(orsa)
ADD_SUBDIRECTORY(rectify)
ADD_SUBDIRECTORY(sift)
ADD_SUBDIRECTORY(size)
ADD_SUBDIRECTORY(showRect)
ADD_SUBDIRECTORY(stereoAC)
ADD_SUBDIRECTORY(subPixel)

INSTALL(FILES CMakeLists.txt DESTINATION src)
