CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(libIO)

SET(SRC io_tiff.c io_tiff.h
        io_png.c io_png.h
        draw.c draw.h
        nan.h)

ADD_LIBRARY(IO ${SRC})

FIND_PACKAGE(TIFF)
FIND_PACKAGE(PNG)

ADD_DEFINITIONS(${PNG_DEFINITIONS})

INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

TARGET_LINK_LIBRARIES(IO ${TIFF_LIBRARIES} ${PNG_LIBRARIES})

IF(UNIX)
    SET_TARGET_PROPERTIES(IO PROPERTIES
                          COMPILE_FLAGS "-Wall -Wextra -Werror")
ENDIF(UNIX)

INSTALL(FILES CMakeLists.txt ${SRC} DESTINATION src/libIO)
