CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(mesh)

SET(SRC mesh.cpp)

ADD_EXECUTABLE(mesh ${SRC})

INCLUDE_DIRECTORIES(..)

IF(UNIX)
    SET_TARGET_PROPERTIES(mesh PROPERTIES
                          COMPILE_FLAGS "-Wall -Wextra -Werror")
ENDIF(UNIX)

TARGET_LINK_LIBRARIES(mesh Numerics IO)

INSTALL(FILES CMakeLists.txt ${SRC} DESTINATION src/mesh)
