CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(size)

SET(SRC size.cpp)

ADD_EXECUTABLE(size ${SRC})

INCLUDE_DIRECTORIES(..)

IF(UNIX)
    SET_TARGET_PROPERTIES(size PROPERTIES
                          COMPILE_FLAGS "-Wall -Wextra -Werror")
ENDIF(UNIX)

TARGET_LINK_LIBRARIES(size IO)

INSTALL(FILES CMakeLists.txt ${SRC} DESTINATION src/size)
